	PR c++/69850 	* gimplify.c (gimplify_cond_expr): Call gimple_set_no_warning 	on the cond_stmt from TREE_NO_WARNING on COND_EXPR_COND. 	* gimple-ssa-nonnull-compare.c (do_warn_nonnull_compare): Don't 	warn on gimple_no_warning_p statements.

* init.c (build_delete): Set TREE_NO_WARNING on ifexp.

	* g++.dg/warn/Wnonnull-compare-1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@233508 138bc75d-0d04-0410-961f-82ee72b054a4