gcc/gimple-ssa-nonnull-compare.c
@@ -96,7 +96,8 @@ do_warn_nonnull_compare (function *fun, tree arg)
 	  }
       if (op
 	  && (POINTER_TYPE_P (TREE_TYPE (arg))
-	      ? integer_zerop (op) : integer_minus_onep (op)))
+	      ? integer_zerop (op) : integer_minus_onep (op))
+	  && !gimple_no_warning_p (stmt))
 	warning_at (loc, OPT_Wnonnull_compare,
 		    "nonnull argument %qD compared to NULL", arg);
     }
