gcc/testsuite/g++.dg/warn/Wnonnull-compare-1.C
@@ -1,0 +1,9 @@
+// PR c++/69850
+// { dg-do compile }
+// { dg-options "-Wall" }
+
+struct C
+{
+  ~C () { delete this; }	// { dg-bogus "nonnull argument" }
+};
+C c;
